# data-ingestion-dlt

./: .gitignore  00-dlt_pipeline.ipynb  01-eda.ipynb  README.md  dlt_pipeline.ipynb  main.py  pipeline.py  pyproject.toml
.github/workflows/: ci.yml  run_pipeline.yml  scheduled.yml
.ipynb_checkpoints/: dlt_pipeline-checkpoint.ipynb
tests/: test_pipeline.py
