[project]
name = "data-ingestion-dlt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt>=1.24.0",
    "duckdb>=1.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
